--- a/config/emacs/nix-vanilla/config.org
+++ b/config/emacs/nix-vanilla/config.org
@@ -812,8 +812,8 @@
   (use-package rainbow-delimiters
     :hook (prog-mode . rainbow-delimiters-mode))
 
-  (use-package ws-butler
-    :hook (prog-mode . ws-butler-mode))
+  ;; (use-package ws-butler
+  ;;   :hook (prog-mode . ws-butler-mode))  ; Commented out - causing build issues
 
   (use-package flycheck
     :hook (prog-mode . flycheck-mode))
