--- a/config/emacs/nix-vanilla/config.org
+++ b/config/emacs/nix-vanilla/config.org
@@ -863,8 +863,9 @@
   (use-package rainbow-delimiters
     :hook (prog-mode . rainbow-delimiters-mode))
 
-  (use-package ws-butler
-    :hook (prog-mode . ws-butler-mode))
+  ;; ws-butler disabled - SSL cert issue with savannah.gnu.org prevents Nix from building it
+  ;; (use-package ws-butler
+  ;;   :hook (prog-mode . ws-butler-mode))
 
   (use-package flycheck
     :hook (prog-mode . flycheck-mode))
